--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-# Project exclude paths
-/lesson-01-servlet-api/target/
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+.idea
+*.iml
+
+target
