--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,33 @@
-# Compiled class file
-*.class
+lesson-04-spring-boot/HELP.md
+target/
+!../.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
-# Log file
-*.log
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
+### IntelliJ IDEA ###
 .idea
+*.iws
 *.iml
+*.ipr
 
-target
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
